# Claude-Code-Personalities

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  build-cross.sh  claude-code-personalities  claude-personalities-setup  install.sh  justfile  push-tap.sh  release.sh  setup-tap-repo.sh  sync-tap.sh  test_hook_resilience.sh  version
.dev/: visualize_colors.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
.serena/: project.yml
.taskmaster/: config.json  state.json
.taskmaster/tasks/: tasks.json
Formula/: claude-code-personalities.rb
claude-code-personalities-rust/: .gitignore  Cargo.toml
claude-code-personalities-rust/src/: error.rs  lib.rs  main.rs  types.rs
claude-code-personalities-rust/src/animation/: activities.rs  engine.rs  (+3 more)
claude-code-personalities-rust/tests/: integration_tests.rs
hooks/: personalities_reset_errors.sh  personalities_track_activity.sh  session_end.sh  track_activity.sh
scripts/: claude-code-personalities-statusline.sh  statusline.sh
src/: error.rs  lib.rs  main.rs  platform.rs  types.rs  version.rs
src/cli/: config.rs  init.rs  install.rs  interactive_config.rs  mod.rs  settings.rs  uninstall.rs  update.rs
src/config/: mod.rs  preferences.rs
src/hooks/: mod.rs
src/icons/: activity.rs  mod.rs  models.rs  status.rs  ui.rs
src/kaomoji/: default.rs  file.rs  mod.rs  mood.rs  time.rs  tool.rs
src/state/: mod.rs
src/statusline/: icons.rs  mod.rs  personality.rs
src/theme/: colors.rs  context.rs  mod.rs  presets.rs
tests/: integration_tests.rs
(+8 files in other folders)
