[package]
name = "claude-code-personalities"
version = "0.0.22"
edition = "2024"
description = "Dynamic text-face personalities for Claude Code's statusline"
license = "WTFPL"
repository = "https://github.com/Mehdi-Hp/claude-code-personalities"
authors = ["Mehdi Hp <mehdi@example.com>"]

[lib]
name = "claude_code_personalities"
path = "src/lib.rs"

[[bin]]
name = "claude-code-personalities"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
tokio = { version = "1.0", features = ["fs", "macros", "rt-multi-thread", "time", "process"] }
tempfile = "3.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1.0"
once_cell = "1.0"
cliclack = "0.3"
rand = "0.9.2"
crossterm = "0.29.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
semver = "1.0"
flate2 = "1.0"
tar = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
